<resources>
    <string name="app_name">Pariwisata</string>
    <string name="deni_ace">Deni Ace (Deni Supriyatna)</string>
    <string name="created_by">Created By</string>
    <string name="wisata_kota_bekasi">Bekasi city tour</string>
    <string name="bekasi_kota_tujuan_pariwisata">Bekasi Tourism Destination</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="menu">Menu</string>
    <string name="judul_profile">Application Maker Profile</string>
    <string name="full_name">Deni Supriyatna</string>
    <string name="nick_name">Deni Ace</string>
    <string name="wisata">Tour</string>
    <string name="restoran">Restaurant</string>
    <string name="hotel">Hotel</string>
    <string name="town_square">Town Square</string>
    <string name="profile">Profile</string>
    <string name="wisata_1_judul" translatable="false">Curug Parigi</string>
    <string name="wisata_1_deskripsi" translatable="false">Berada di tengah kawasan industri yang padat, tempat wisata di Bekasi yang kerap disebut Niagara mini ini memang sedikit tersembunyi. Dengan lebar hingga 20 meter serta ketinggian 2 meter dengan arus air yang stabil tak terlalu deras, tak salah memang jika Curug Parigi disebut demikian.

Dengan pepohonan hijau di sekitarnya, tentu menambah Susana asri yang menyenangkan. Sehingga banyak yang menjadikannya sebagai spot foto selfi hingga preweding.</string>
    <string name="wisata_2_judul" translatable="false">Situ Cibereum</string>
    <string name="wisata_2_deskripsi" translatable="false">Tempat wisata di Bekasi selanjutnya yang juga memiliki pesona alam luar biasa di tengah pesatnya pembangunan ialah Situ Cibereum. Dibalik pesonanya, danau yang terbentuk secara alami ini ternyata juga menyimpan legenda yang membuat banyak orang penasaran dengannya. Di danau yang kini tinggal seluas 2 hektar ini konon dihuni buaya putih yang diyakini sebagai penunggu oleh masyarakat sekitar.

Terlepas dari sisi mistik yang dimilikinya, Situ Cibereum ini pun menawarkan banyak aktivitas menarik yang bisa Anda lakukan bersama keluarga. Seperti menjelajahi danau, mancing hingga nongkrong sambil menikmati kuliner yang dijajakan di tepi kawasan danau.</string>
    <string name="wisata_3_judul" translatable="false">Danau Marrakash</string>
    <string name="wisata_3_deskripsi" translatable="false">Berlokasi di kawasan Kompleks Perumahan Pesona Ungu, Danau Marakas menjadi satu destinasi yang menarik untuk dikunjungi bersama keluarga. Meski awalnya hanya dibuat sebagai tempat penampungan air bagi warga perumahan. Namun seiring waktu banyak yang tertarik dengan pesonanya sehingga kini kawasan danau pun telah dilengkapi dengan berbagai macam permainan seru serta kuliner yang menggoda.

Di dekat danau juga terdapat kolam renang serta fasilitas penunjang yang lain yang akan membuat liburan bersama keluarga makin asyik. Jika Anda ingin menghabiskan malam di dekat danuau, ada juga fasilitas guest house yang bisa disewa, lho.</string>
    <string name="wisata_4_judul" translatable="false">Jembatan Cinta</string>
    <string name="wisata_4_deskripsi" translatable="false">Jembatan Cinta bisa jadi tujuan menarik untuk sejenak melepaskan penat dari aktivitas pekerjaan yang tak ada habisnya. Terletak di tengah kawasan Pusat Restorasi dan Pembelajaran Mangrove di Tarumajaya, tempat wisata di Bekasi tersebut mungkin belum banyak diketahui. Meski demikian pesona yang dimiliki destinasi wisata ini tak kalah memukau dari destinasi serupa yang ada di Kepulauan Seribu.

Anda dapat menjelajahi keindahan hutan mangrove lebih dekat dari atas jembatan atau bisa juga menyewa perahu yang disediakan.  Di sekitar hutan mangrove juga terlihat banyak nelayan menangkap ikan, ini bisa jadi pemandangan unik tersendiri yang bisa diabadikan.</string>
    <string name="wisata_5_judul" translatable="false">Rumah Pohon Jatiasih</string>
    <string name="wisata_5_deskripsi" translatable="false">Suka menghabiskan waktu di tengah alam terbuka? Cobalah mampir ke Rumah Pohon yang berada di kawasan Jatiasih – Bekasi. Banyak hal menarik yang disuguhkan di sini yang bisa Anda jelajahi terutama rumah-rumah yang dibangun di atas pohon besar. Selain itu tempat wisata di Bekasi yang satu ini juga bisa jadi spot foto yang instagramable, sebab memiliki desain yang sangat unik.

Destinasi yang satu ini menawarkan wisata dengan konsep ramah lingkungan, tak heran jika suasananya begitu asri dan damai. Fasilitas lainnya yang bisa Anda nikmati seperti danau untuk kegiatan memancing, arena outbond seru yang bisa disesuaikan dengan usia. Lalu Anda juga bisa menjelajahi kawasan disekitar rumah pohon dengan mengendarai ATV hingga berwisata kuliner.</string>
    <string name="image_detail">Image Detail</string>
    <string name="more">More</string>
    <string name="menu_wisata">Tourism Menu</string>
    <string name="email">denisupriyatna01@gmail.com</string>
    <string name="restoran_1_judul" translatable="false">Koma Junkyard Cafe</string>
    <string name="restoran_1_deskripsi" translatable="false">Jika Anda mengunjungi Bekasi khususnya Bekasi Timur, Anda tidak usah khawatir untuk takut merasa kelaparan. Karena ada Koma Junkyard Cafe yang menyediakan beragam menu, seperti Magelangan, waffle, burger, takoyaki, kupat tahu dan lain-lain. Tempat makan ini menyediakan mulai dari makanan yang tradisional hingga makanan yang kekinian.
Selain untuk makan bersama keluarga, tempat ini juga cocok untuk nongkrong dan ngobrol bersama teman-teman. Suasana di Koma Junkyard Cafe sangat santai dan menarik, aka nada live music yang akan selalu menemani saat menyantap hidangan.</string>
    <string name="restoran_2_judul" translatable="false">Eat Happens</string>
    <string name="restoran_2_deskripsi" translatable="false">Tempat makan ini memang terkenal sangat unik, karena menyediakan menu-menu seperti martabak, kue cubit, hungry john dan nasi goreng hitam. Meskipun kafe ini terkenal sebagai tempat tongkrongan bagi pecinta martabak, Anda dan keluarga juga dapat mengunjungi untuk mencicipi menu-menu yang tersedia.
Dengan membawa anggota keluarga atau teman-teman ke Eat Happens maka suasana kekeluargaan dan pertemanan akan semakin akrab. Karena nuansa cafe yang modern dan kekinian membuat pengunjung bisa bersantai dan bercanda ria.</string>
    <string name="restoran_3_judul" translatable="false">Bakmi GM Metropolitan</string>
    <string name="restoran_3_deskripsi" translatable="false">Bagi Anda yang menyukai menu-menu mie, Anda wajib untuk datang ke Bakmi GM Metropolitan, bakmi ini berbeda dari bakmi-bakmi lain, karena memiliki tekstur mie yang kenyal dan tipis dibandingkan dengan mie-mie lain.
Untuk masalah harga, Anda tidak usah khawatir, karena harga yang ditawarkan sangat ramah di kantong.
Menu-menu yang tersedia di Bakmi GM Metropolitan antara lain, Bakmi Sapi Cah Cabai, Nasi Ayam Cah Cabai, Bakmi Ayam Saus Thai, Bakmi Goreng GM, Nasi Goreng Smoked Chicken, Bakmi Sapi Cah Cabai dan lain-lain.
Lokasi Bakmi ini terletak di Mal Metropolitan 2 Lantai II Bekasi Selatan.</string>
    <string name="restoran_4_judul" translatable="false">Raja Sunda</string>
    <string name="restoran_4_deskripsi" translatable="false">Tempat makan keluarga di Bekasi selanjutnya adalah rumah makan Raja Sunda, tempat makan ini menyediakan berbagai masakan Sunda seperti, dara goreng, tahu tempe, ikan asin, dan lalapan. Rumah makan ini memiliki suasana yang unik dan harga yang sangat terjangkau. Raja Sunda mulai buka dari jam sepuluh pagi sampai sepuluh makam.</string>
    <string name="restoran_5_judul" translatable="false">Masturiya</string>
    <string name="ts_1_judul" translatable="false">Revo Town</string>
    <string name="ts_1_deskripsi" translatable="false">Menjadi shopping mall yang terbesar adalah Revo Town. Dulunya pusat perbelanjaan ini bernama Bekasi Square yang juga disertai dengan renovasi pada bangunan menjadi lebih modern dan nyaman bagi pengunjung. Mengusung tagline “Simply a place for togetherness and family quality time”, Revo Town ingin menghadirkan pusat perbelanjaan untuk para pengunjungnya bersuka ria dengan keluarga dan sahabat.

Dengan luas hingga 4 Hektar, mall ini hadir dengan ratusan merchant di keempat lantainya. Tak hanya menyuguhkan tempat berbelanja dan hiburan, kamu juga tetap bisa beribadah di sini dan beristirahat di restroom yang sudah disediakan. Untuk mengunjunginya, kamu harus menuju ke Jl. Jend. Ahmad Yani Kav. 1, Pekayon Jaya, Bekasi Selatan. Bersiaplah untuk merasa betah berlama-lama di sana karena desain interior nya yang cozy dan unik.</string>
    <string name="ts_2_judul" translatable="false">Mal Metropolitan</string>
    <string name="ts_2_deskripsi" translatable="false">Di urutan kedua ada Mal Metropolitan yang memiliki luas hingga 3,5 Hektar. Dengan slogan “Dunia Belanja dan Rekreasi”, mall ini memang tak hanya sebagai tempat belanja saja, tapi juga menjadi tempat rekreasi yang asyik bagi pengunjungnya. Mall yang dibangun pada tahun 1993 ini merupakan mall kelas menengah pertama di pusat bisnis Kota Bekasi dan terhubung dengan Hotel Horison Ultima Bekasi.

Aneka tempat belanja fashion, kuliner, bioskop, hingga tempat bermain anak bisa kamu temukan di sini. Lokasinya pun sangat strategis karena diapit oleh jalan tol Jakarta – Cikampek dan Kalimalang, sehingga memudahkanmu untuk berkunjung ke sana, baik dari Jakarta maupun Bekasi. Ada lebih dari 300 tenant, dijamin kamu pasti merasakan kepuasan dan kenyaman saat mengunjungi mall ini. Langsung saja datang ke lokasinya di Jl. KH. Noer Ali Mal Metropolitan Building South Bekasi.</string>
    <string name="ts_3_judul" translatable="false">Bekasi Cyber Park</string>
    <string name="ts_3_deskripsi" translatable="false">Kalau kamu sedang membutuhkan komputer atau gadget, Bekasi Cyber Park (BCP) adalah tempat yang wajib kamu datangi. Sebagai pusat belanja IT terbesar di kota Bekasi, BCP menawarkan harga produk yang murah dengan kualitas baik dan lengkap.

Beralamatkan di Jalan K.H. Noer Alie, Kayuringin Jaya, Bekasi Selatan, Bekasi, ada lebih dari 200 tenant yang siap memanjakan para pengunjungnya untuk berbelanja, tak hanya IT saja tapi juga kebutuhan lainnya. Kamu juga bisa menikmati kuliner di sini karena tersedia ragam masakan dari restoran yang menggugah selera, ataupun menonton bioskop di CGV.</string>
    <string name="ts_4_judul" translatable="false">Grand Mall Bekasi</string>
    <string name="ts_4_deskripsi" translatable="false">Salah satu mall favorit masyarakat Bekasi adalah Grand Mall Bekasi. Tenant-tenant nya yang lengkap memberikan banyak kemudahan kepada pengunjung dalam satu lokasi yang sangat strategis. Pengunjung bisa berbelanja, makan, menikmati hiburan, ataupun bersantai dan berkumpul bersama keluarga dan teman.

Lokasinya ada di Jalan Jenderal Sudirman No. 1, Kranji, Medan Satria, Harapan Mulya, Medan Satria, Bekasi. Lokasi ini memudahkan siapa saja untuk berkunjung ke sana. Pengunjung pun akan merasakan kenyamanan dan kemudahan saat berada di sini untuk memenuhi kebutuhannya.</string>
    <string name="ts_5_judul" translatable="false">Summarecon Mal Bekasi</string>
    <string name="ts_5_deskripsi" translatable="false">Beralamatkan di Jl. Boulevard Ahmad Yani Blok M Sentra Summarecon Bekasi Bekasi Utara, Summarecon Mal Bekasi (SMB) secara resmi dibuka pada tanggal 28 Juni 2013. Dengan luas bangunan 80.000 m2, mall ini terdiri dari 4 lantai dan 1 lantai basement yang mampu menampung 3200 mobil dan 3200 motor.

Menghadirkan kurang lebih 220 tenant ternama, pengunjung akan dimanjakan dengan kemudahan dalam berbelanja, menyantap kuliner, menikmati hiburan, hingga bercengkrama. Desain bangunannya pun sangat memberikan kenyamanan pengunjung melalui konsep modern minimalis yang tentunya disertai dengan fasilitas lengkap, seperti tempat ibadah, toilet bersih, tempat menyusui, dan sebagainya.</string>
</resources>