<?xml version="1.0" encoding="utf-8"?>

<!--    Created by Deni Supriyatna (deni ace) on 22 - 05 - 2020.-->
<!--    Email : denisupriyatna01@gmail.com-->

<layout>

    <data>

        <variable
            name="activity"
            type="com.deni.pariwisata.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/wisata_kota_bekasi"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul">

            <ImageView
                android:id="@+id/iv_splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_patriot" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_deskripsi_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/bekasi_kota_tujuan_pariwisata"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/ll_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_main" />

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/btn_about_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:backgroundTint="@android:color/holo_green_dark"
                android:onClick="@{activity::goToAbout}"
                android:text="@string/about"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_go_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="@{activity::goToMenu}"
                android:text="@string/menu"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_exit_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="@{activity::exit}"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>