<?xml version="1.0" encoding="utf-8"?>

<!--    Created by Deni Supriyatna (deni ace) on 22 - 05 - 2020.-->
<!--    Email : denisupriyatna01@gmail.com-->

<layout>

    <data>

        <variable
            name="activity"
            type="com.deni.pariwisata.view.AboutActivity" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".view.AboutActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/judul_profile"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:src="@drawable/deni_low" />

            <TextView
                android:id="@+id/nama_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/full_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nick_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/nick_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_profile_ib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_profile_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@android:color/white"
                    android:onClick="@{activity::goToFacebook}"
                    android:src="@drawable/facebook_logo_70" />

                <ImageButton
                    android:id="@+id/ib_profile_yt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@android:color/white"
                    android:onClick="@{activity::goToYoutube}"
                    android:src="@drawable/yt_logo_70" />

                <ImageButton
                    android:id="@+id/ib_profile_ig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@android:color/white"
                    android:onClick="@{activity::goToIG}"
                    android:src="@drawable/instagram_logo_70" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>